Now with 80% fewer tables

--- a/about-me.html
+++ b/about-me.html
@@ -8,23 +8,16 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
 
-<div align="center">
-<table cellpadding=5 bgcolor=#FFFFFF width=997>
-	<tr>
-		<td valign=top width=997 align=center>
-			<h2>About Me</h2>
-		</td>
-	</tr>
-	<tr align=center>
-		<td valign=top width=997>
+	<style>td { padding: 3px; border: 0 none; }</style>
+	<div id="body">
+		<div class="article">
+
+			<h1>About Me</h1>
 			<table>
 				<tr>
 					<td colspan=2>
-						<font color="#0000FF"><b>Stats</b><hr></font>
+						<font color="#0000FF"><b>Stats</b></font>
 					</td>
 				</tr>
 				<tr>
@@ -59,7 +52,7 @@
 				</tr>
 				<tr>
 					<td colspan=2>
-						<font color="#0000FF"><b>Favorites</b><hr></font>
+						<font color="#0000FF"><b>Favorites</b></font>
 					</td>
 				</tr>    
 				<tr>
@@ -93,13 +86,8 @@
 					</td>
 				</tr>
 			</table>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
