--- a/colors.html
+++ b/colors.html
@@ -8,24 +8,14 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF width=100%>
-	<tr>
-		<td colspan=5>
-			<h2>Colored Drawings</h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=5>
-			<h3>These are various drawings I've colored on the puter. (Drawings are clickable and lead to a larger version.)</h3>
-		</td>
-	</tr>
-</table>
-<table border="1" bgcolor=#FFFFFF width=100%>
+			<h1>Colored Drawings</h1>
+			<p>These are various drawings I've colored digitally. (Drawings are clickable and lead to a larger version.)</p>
+
+<table width=100%>
 	
 	<tr>
 		<td align=center width=25%>
@@ -64,10 +54,9 @@
 	</tr>
 	
 </table>
-</div>
-			</td>
-		</tr>
-	</table>
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
