--- a/i-show.html
+++ b/i-show.html
@@ -8,104 +8,50 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
-
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5>
-	<tr>
-		<td align="center" colspan="2">
-			<h2>The i-Show Page</h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-	</tr>
+	
+	<div id="body">
+		<div class="article">
+			<h1>The i-Show Page</h1>
+			
+			<h2><font color="#0000FF">What's an i-Show?</font></h2>
+			
+			<p>
+				I had this idea for a show. Something new, different, and exactly what you've seen before. It's supposed to be like a late night talk show without the guests (because who is going to come to Michigan to be on some crappy internet show?) So I do some comedy bits for about twenty minutes a few times a week and see if I can get a cult following... AND THEN I TAKE OVER THE WORLD!!! (Insert evil laugh here.) I'm currently still in the development stages of the show. I'm trying to get enough material for a few weeks worth of shows and I still need a decent video camera. Plus, I'll need better internet hosting.
+			</p>
 		
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">What's an i-Show?</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
-			I had this idea for a show. Something new, different, and exactly what you've seen before. It's supposed to be like a late night talk show without the guests (because who is going to come to Michigan to be on some crappy internet show?) So I do some comedy bits for about twenty minutes a few times a week and see if I can get a cult following... AND THEN I TAKE OVER THE WORLD!!! (Insert evil laugh here.) I'm currently still in the development stages of the show. I'm trying to get enough material for a few weeks worth of shows and I still need a decent video camera. Plus, I'll need better internet hosting.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#008000">Blaise Alicki</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
-			The creator, writer, director, and host of the i-Show, <font color="#008000"> Blaise</font> does it all. Why? For you. Because he cares.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#FF00FF">Eddie da Pig</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
-			<font color="#FF00FF">Eddie da Pig</font> gives us the word of the day. Unfortunately, Eddie is not a talking pig so the word of the day is &quot;OINK!&quot;<p><img src="images/eddiedapig.gif"></p>
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#FF0000">CrazyBoy</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
-			Wogga Wogga Wogga!!! I haf a pinyins that haf to bee herd!
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#808080">Kurt Stevens</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
-			Delivers the day's headlines like only a true newscaster can.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">Will The i-Show have nudity?</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
-			Only <font color="#FF00FF">da Pig</font> will be appearing naked.
-			<hr><br>
-		</td>
-	</tr>
-	
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+			<h2><font color="#008000">Blaise Alicki</font></h2>
+		
+			
+			<p>
+				The creator, writer, director, and host of the i-Show, <font color="#008000"> Blaise</font> does it all. Why? For you. Because he cares.
+			</p>
+			
+			<h2><font color="#FF00FF">Eddie da Pig</font></h2>
+			
+			<p>
+				<font color="#FF00FF">Eddie da Pig</font> gives us the word of the day. Unfortunately, Eddie is not a talking pig so the word of the day is &quot;OINK!&quot;<p><img src="images/eddiedapig.gif"></p>
+			</p>
+		
+			<h2><font color="#FF0000">CrazyBoy</font></h2>
+			
+			<p>
+				Wogga Wogga Wogga!!! I haf a pinyins that haf to bee herd!
+			</p>
+		
+			<h2><font color="#808080">Kurt Stevens</font></h2>
+			
+			<p>
+				Delivers the day's headlines like only a true newscaster can.			
+			</p>
+		
+			<h2><font color="#0000FF">Will The i-Show have nudity?</font></h2>
+			
+			<p>
+				Only <font color="#FF00FF">da Pig</font> will be appearing naked.
+			</p>
+		
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
