--- a/im-too-tired.html
+++ b/im-too-tired.html
@@ -8,21 +8,13 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997>
-  <tr>
-    <td><div align=center><h2>Things I'm Too Tired To Say</h2></div></td>
-  </tr>
-  <tr>
-    <td><div align="center"><h6 class=warn>Warning: most amusing when tired, most confusing when awake.</h6></div></td>
-  </tr>
-  <tr>
-    <td valign="top">
-		I really shouldn't get up in the morning until after I've gone to bed.<br><br>
+			<h1>Things I'm Too Tired To Say</h1>
+			<h6 class=warn>Warning: most amusing when tired, most confusing when awake.</h6>
+	
+			I really shouldn't get up in the morning until after I've gone to bed.<br><br>
 			I refuse to live on Eastern Standard Time.<br><br>
 			And don't think you can trick me with that daylight savings crap.<br><br>
 			I wish my snooze alarm would go off after 11 minutes instead of only 9.<br><br>
@@ -42,13 +34,10 @@
 			If you ever need a place to sleep, there's extra space and a blanket under my desk, only seven dollars a night.<br><br>
 			I did not make up the word 'alphabetical' so you don't have to ask my permission to use it.<br><br>
 			
-    </td>
-  </tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+    
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
