--- a/index.html
+++ b/index.html
@@ -1,68 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<meta charset="utf-8" />
 	<title>Turtle Interactive Software</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-	<script type='text/javascript' src='menu_var.js'></script>
-	<script type='text/javascript' src='menu_com.js'></script>
+	<script src='menu_var.js'></script>
+	<script src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
-
-<div align="center">
-<table width=997 bgcolor=#FFFFFF cellpadding=5>
-	<tr>
-		<td align="center" colspan="2">
+	<div id="body">
+		<div class="article" style="text-align: center;">
 			<h1>Welcome to Turtle-IS.com</h1>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<p class="black">The official website of Blaise Alicki and Turtle Interactive Software.</p>
+
+			<p>The official website of <span class="blaise">Blaise Alicki</span> and Turtle Interactive Software.</p>
 			<hr>
-		</td>
-	</tr>
-	<tr>
-		<td align="center" colspan="2">
+
 			<h2>Site Description</h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<p class="black">This site is an amalgamation of my creative abilities. It's 2 to 20 megabytes of things I thought and thoughts I think. My imagination and madness in one neat little package. My inane and insane ramblings are here for little more than my own amusement, but feel free to take some time to enjoy them for yourself.</p>
+
+			<p style="padding: 0 120px;">This site is an amalgamation of my creative abilities. It's 2 to 20 megabytes of things I thought and thoughts I think. My imagination and madness in one neat little package. My inane and insane ramblings are here for little more than my own amusement, but feel free to take some time to enjoy them for yourself.</p>
 			<hr>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2" align="center"
-		></td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<strong>830622</strong>
- <font SIZE="1">folks (and/or bots) have hit the site (before I made it static and stopped counting). Thanks!</font>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
-	<script type='text/javascript' src='header_footer.js'></script>
+
+			<strong>830622</strong> folks (and/or bots) have hit the site (before I made it static and stopped counting). Thanks!
+		</div>
+	</div>
+	<script src='header_footer.js'></script>
 </body>
 </html>
