--- a/movies.html
+++ b/movies.html
@@ -8,118 +8,59 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997>
-	<tr>
-		<td align="center" colspan="2">
-			<h2>The Movie Page</h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#008000">Blaise Alicki</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+			<h1>The Movie Page</h1>
+			
+			<h2><font color="#008000">Blaise Alicki</font></h3>
+
+			
+		<p>
 			So, I'm writing a movie. (Actually, I'm working on three movies now.)
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">The Concept</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2><font color="#0000FF">The Concept</font></h3>
+			
+		<p>
 			The original idea is a life without consequences for the first movie.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">That's A Terrible Idea</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2><font color="#0000FF">That's A Terrible Idea</font></h3>
+			
+		<p>
 			I don't care.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">Wogga?</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2><font color="#0000FF">Wogga?</font></h3>
+			
+		<p>
 			Wogga wogga.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">So, Is That It?</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2><font color="#0000FF">So, Is That It?</font></h3>
+		</p>
+		
+		<p>
 			No, but that's all I'm disclosing publicly at this time. If you want more, you'll have to pay me for it. I have some story boards for a few shots and a couple of scenes worked out and my main characters have been fleshed out a bit. Other than that, I have no idea for an actual story to take place during the movie.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">And The Second Movie?</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2><font color="#0000FF">And The Second Movie?</font></h3>
+			
+		<p>
 			I had this whole story about some witness protection thing and evil lawyers, but I'm not sure I want to make that one any more right now.
-			<hr><br>
-		</td>
-	</tr>
-	
-	<tr>
-		<td colspan="2">
-			<h3><font color="#0000FF">Alright, What About The Third Movie?</font></h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2><font color="#0000FF">Alright, What About The Third Movie?</font></h3>
+			
+		<p>
 			It's supposed to be a funny movie about Ninjas. This one actually has some pieces of a script done. <a href="ninjah-fantasy.html">Click here</a> to see what I've written so far.
-			<hr><br>
-		</td>
-	</tr>
-	
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+		</p>
+		
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
