--- a/my-dvds.html
+++ b/my-dvds.html
@@ -8,19 +8,11 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997>
-	<tr>
-		<td colspan=2>
-			<p align="center"><h2>My DVD's</h2>
-		</td>
-	</tr>
-	<tr>
-		<td valign=top width=498>
+			<h1>My DVD's</h1>
 			<ul>
 				<li>28 Days Later</li>
 				<li>Akira</li>
@@ -83,10 +75,6 @@
 				<li>Kill Bill Volume 2</li>
 				<li>The Last Samurai</li>
 				<li>The Legend Of Suriyothai</li>
-			</ul>
-		</td>
-		<td width=498 valign=top>
-			<ul>
 				<li>The Lion King</li>
 				<li>Looney Tunes: Golden Collection</li>
 				<li>Lord Of The Rings: The Fellowship Of The Ring (both versions)</li>
@@ -147,14 +135,10 @@
 				<li>Underworld</li>
 				<li>X-Men</li>
 				<li>X-Men 2</li>
-			</ul>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+			</ul>			
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
