--- a/ninjah-fantasy.html
+++ b/ninjah-fantasy.html
@@ -8,13 +8,12 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997><tr><td>
-<p><h2>Nin-Jah Fantasy</h2></p>
+<div>
+<h1>Nin-Jah Fantasy</h1>
 <p>&nbsp;</p>
 <p>In the future of a long time ago (i.e. right now) there is 
 a gang of Nin-Jah traveling the country in search of something. And then they 
@@ -32,18 +31,18 @@ continues.</p>
 <p>&nbsp;</p>
 <p>SHIN grabs WANG and throws him to the ground.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN: What the hell is your 
+<p style="text-indent: .5in">SHIN: What the hell is your 
 problem, WANG?</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">WANG: I thought I saw something.</p>
+<p style="text-indent: .5in">WANG: I thought I saw something.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN: There's nothing here but 
+<p style="text-indent: .5in">SHIN: There's nothing here but 
 your shadow.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">WANG: ...I have a really scary 
+<p style="text-indent: .5in">WANG: ...I have a really scary 
 shadow...</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN: Keep moving and shut up.</p>
+<p style="text-indent: .5in">SHIN: Keep moving and shut up.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><u>CART-FU SCENE</u></p>
@@ -52,21 +51,21 @@ shadow...</p>
 <p>&nbsp;</p>
 <p>NEE and TOE are walking through a parking lot. NEE is pushing a shopping cart.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">NEE: I know Cart-fu.</p>
+<p style="text-indent: .5in">NEE: I know Cart-fu.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE: You're an idiot.</p>
+<p style="text-indent: .5in">TOE: You're an idiot.</p>
 <p>&nbsp;</p>
 <p>NEE slams the cart into TOE.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE: Damn it, NEE, you hit me.</p>
+<p style="text-indent: .5in">TOE: Damn it, NEE, you hit me.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">NEE: Hit you with a <i>CART</i>!</p>
+<p style="text-indent: .5in">NEE: Hit you with a <i>CART</i>!</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE: That's it! Let's go!</p>
+<p style="text-indent: .5in">TOE: That's it! Let's go!</p>
 <p>&nbsp;</p>
 <p>NEE and TOE start fighting as the camera pans away. When the camera pans back, TOE is wrapped into and around the cart, once again being pushed by NEE.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">NEE: Bitch.</p>
+<p style="text-indent: .5in">NEE: Bitch.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><u>NIN-JAH DANCE SCENE</u></p>
@@ -81,7 +80,7 @@ shadow...</p>
 <p>A cell phone rings in a most annoying and comical tone. TOE pulls the phone out of his pocket and beings conversing with the person on 
 the other end.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE: Hello... Hi, Mom... No, Mom, I can't bring home milk, I'm with the guys and we're looking for the thing...Yeah, I 
+<p style="text-indent: .5in">TOE: Hello... Hi, Mom... No, Mom, I can't bring home milk, I'm with the guys and we're looking for the thing...Yeah, I 
 know I told you we found it, but Wang dropped it and now we're trying to find another one... Yes, we're going to make him pay to replace it, but he needs help 
 finding it... Sorry, I have to go, the guys are threatening to smash my phone...I love you too, Mom. Bye.</p>
 <p>&nbsp;</p>
@@ -100,16 +99,15 @@ be punching the person out.</p>
 <p>&nbsp;</p>
 <p>The four Nin-Jah are standing in an aisle as they decide the item Wang is holding is not what they are looking for.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN: Alright, Wang, put it back on the shelf, throw a smoke bomb, and let's get out of here.</p>
+<p style="text-indent: .5in">SHIN: Alright, Wang, put it back on the shelf, throw a smoke bomb, and let's get out of here.</p>
 <p>&nbsp;</p>
 <p>Wang throws the item smashing into the ground as he puts the smoke bomb on the shelf. Suddenly the Nin-Jah are gone.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-</td></tr></table>
 </div>
-			</td>
-		</tr>
-	</table>
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
