--- a/pictures.html
+++ b/pictures.html
@@ -8,17 +8,13 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	<style>td { padding: 3px; text-align: center; }</style>
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997>
-	<tr>
-		<td>
-			<h2>Pictures</h2>
-			<h3>These are various pictures I've made/taken over the past few years. (Pictures are clickable and usually lead to a larger version.)</h3><br><br>
-			<table border=1>
+			<h1>Pictures</h1>
+			<p>These are various pictures I've made/taken in the far times. (Pictures are clickable and usually lead to a larger version.)</p>
+			<table>
 				
 				<tr>
 					<td><a href="images/me01.jpg"><img border="0" src="thumbs/me01.jpg"></a><br>Hi, I'm <font color="#72b800">Blaise</font>.</td>
@@ -72,13 +68,9 @@
 					<td colspan=3><a href="kmart-pics.html">Kmart Pictures</a> <a href="drawings.html">Drawings</a> <a href="pixels.html">Pixel Art</a> <a href="comics.html">Comics</a> <a href="ninjahc.html">Nin-Jah Comic Book</a></td>
 				</tr>
 			</table>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
