--- a/wallpapers.html
+++ b/wallpapers.html
@@ -8,18 +8,14 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF width=997 cellpadding=5>
-	<tr>
-		<td>
-			<h2>Wallpapers</h2>
-			<h3>These are some wallpapers for your desktop.</h3>
-			<div align=center>
-			<table border=1 bordercolor=#000000 cellpadding=5>
+			<h1>Wallpapers</h1>
+			<p>These are some wallpapers for your desktop.</p>
+
+			<table>
 				<tr>
 					<td>
 						<img border="0" src="thumbs/bunnypicwp.jpg" width="300" height="240">
@@ -77,14 +73,9 @@
 					</td>
 				</tr>
 			</table>
-			</div>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
