--- a/comics.html
+++ b/comics.html
@@ -8,18 +8,13 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF width=997 cellpadding=5>
-	<tr>
-		<td>
-			<h2>Comics</h2>
-			<h3>Some comics I have drawn.</h3>
-			<div align=center>
-			<table border=1 width="812" bordercolor=#000000 cellpadding=5>
+			<h1>Comics</h1>
+			<p>Some comics I have drawn.</p>
+			<table>
 				<tr>
 					<td width="334">
 						<a href="images/teacher03.jpg"><img border="0" src="thumbs/teacher03.jpg" width="244" height="150"></a>
@@ -29,14 +24,16 @@
 		    		</td>
 				</tr>
 				<tr>
-					<td width="334" valign=top>
+					<td width="334" style="padding: 6px; vertical-align: top;">
 						I won't stand for any independent thinking in this room. If you're not thinking like me, you're not thinking.
 					</td>
-					<td width="148" valign=top>
+					<td width="148" style="padding: 6px; vertical-align: top;">
 						I have a question.
 					</td>
-					<td colspan="2" width="311" valign=top>
-						Well, that's not right. You should consider not having a question.
+					<td colspan="2" width="311" style="padding: 6px; vertical-align: top;">
+						Well, that's not right.
+						<br>
+						You should consider not having a question.
 					</td>
 				</tr>
 				<tr>
@@ -48,16 +45,16 @@
 					</td>
 				</tr>
 				<tr>
-					<td width="334" valign=top>
+					<td width="334" style="padding: 6px; vertical-align: top;">
 						Who wants to touch my briefcase? Come on people.
 					</td>
-					<td width="148" valign=top>
+					<td width="148" style="padding: 6px; vertical-align: top;">
 						Wait, wait, wait...
 					</td>
-					<td width="151" valign=top>
+					<td width="151" style="padding: 6px; vertical-align: top;">
 						Don't Sharpen your pencil, I'm thinking.
 					</td>
-					<td width="154" valign=top>
+					<td width="154" style="padding: 6px; vertical-align: top;">
 						Okay, I'm done thinking now.
 					</td>
 				</tr>
@@ -73,25 +70,20 @@
 					</td>
 				</tr>
 				<tr>
-					<td width="334" valign=top>
+					<td width="334" style="padding: 6px; vertical-align: top;">
 						If any of you can figure out a way to make your learning less of an inconvenience for me I would greatly appreciate it.
 					</td>
-					<td colspan="2" width="305" valign=top>
+					<td colspan="2" width="305" style="padding: 6px; vertical-align: top;">
 						Wait here, I'm going out in the hall to praise myself.
 					</td>
-					<td width="154" valign=top>
+					<td width="154" style="padding: 6px; vertical-align: top;">
 						These were all based on an actual teacher who said these things. Some of the words may have changed slightly because they are not in context, but the meaning is the same.
 					</td>
 				</tr>
 			</table>
-			</div>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
