--- a/drawings.html
+++ b/drawings.html
@@ -8,24 +8,14 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	<style>td { padding: 3px; text-align: center; }</style>
+	<div id="body">
+		<div class="article">
 
-<div align="center">
-<table bgcolor=#FFFFFF>
-	<tr>
-		<td colspan=5>
-			<h2>Drawings</h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=5>
-			<h3>These are various drawings I've made over the last 5 years or so. (Drawings are clickable and lead to a larger version.)</h3>
-		</td>
-	</tr>
-</table>
-<table border="1" bgcolor=#FFFFFF>
+			<h1>Drawings</h1>
+			<p>These are various drawings I've made in the deep and distant past. (Drawings are clickable and lead to a larger version.)</p>
+
+<table>
 	
 	<tr>
 		<td>
@@ -138,10 +128,9 @@
 	</tr>
 	
 </table>
-</div>
-			</td>
-		</tr>
-	</table>
+			
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
