--- a/kmart.html
+++ b/kmart.html
@@ -8,132 +8,68 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
-
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5>
-	<tr>
-		<td align="center" colspan="2">
-			<h2>My <font color="#FF0000">Complaints</font> About <font color="#FF0000">K</font><font color="#0000FF">mart</font></h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-	</tr>
 	
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">There is no ad merchandise</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+	<div id="body">
+		<div class="article">
+
+			<h1>My <font color="#FF0000">Complaints</font> About <font color="#FF0000">K</font><font color="#0000FF">mart</font></h1>
+
+
+			<h2 class="a1">There is no ad merchandise</h2>
+			
+		<p>
 			Don't you just love going to a store that doesn't have anything to sell.We ran out of air conditioners after the first three hours of a three day sale.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">Rainchecks are stupid</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2 class="a1">Rainchecks are stupid</h2>
+			
+		<p>
 			I went to the store to get buy something, but instead I got a stupid piece of paper. Oh joy! now I can wipe my ass.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">The corporate office is run by monkeys</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2 class="a1">The corporate office is run by monkeys</h2>
+			
+		<p>
 			Not super-intelligent, genetically engineered monkeys either. No, they are a bunch of drunken, stupid-ass monkeys that get off by throwing shit at each other.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">Everyday the prices change</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+
+			<h2 class="a1">Everyday the prices change</h2>
+
+		<p>
 			Up and down and up and down the prices just keep moving.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">Somebody stole Layaway Jones</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+
+			<h2 class="a1">Somebody stole Layaway Jones</h2>
+		<p>
 			And he hasn't been seen since.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">Fewer than half the air conditioners in the store are working</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+			<h2 class="a1">Fewer than half the air conditioners in the store are working</h2>
+		<p>
 			It is the hottest store in West Michigan. When its 85 degrees outside, its 82 degrees inside. That's why I'm trying
 			to start a water gun fight in the store. So if you stop in please bring a loaded squirt gun.<br><br>
 			Update: Air conditioning seems to be working at the moment. Very bizarre.<br><br>
 			Update 2: Only one air conditioner was actually fixed. Not surprising.<br><br>
 			Update 3: Most recent attempt to fix AC appears to have work. AND, this is big so sit down, THE BREAK ROOM HAS AIR CONDITIONING!!!
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">Martha Stewart</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+
+			<h2 class="a1">Martha Stewart</h2>
+
+		<p>
 			I don't think I have to elaborate.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1"><font color="#FF0000">K</font>mart hates America</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+		
+			<h2 class="a1"><font color="#FF0000">K</font>mart hates America</h2>
+
+		<p>
 			I had to work eight hours on the Fourth of July because <font color="#FF0000">K</font><font color="#0000FF">mart</font>
 			is open. I also get to work on Labor Day and Memorial Day, because <font color="#FF0000">K</font><font color="#0000FF">mart </font>is open
 			on those days too. Clearly, <font color="#FF0000">K</font><font color="#0000FF">mart</font> hates America.<br><br>
 			Update: I somehow got out of working on Memorial Day, but Kmart was still open, so I stand by my statement: Kmart Hates America.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">A good number of customers are dumb as bricks</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+
+			<h2 class="a1">A good number of customers are dumb as bricks</h2>
+
+		<p>
 			Lets establish some good rules to make things easier for all of us:
 			<ol>
 				<li>If your car has a working alarm, you should not be shopping at <font color="#FF0000">K</font><font color="#0000FF">mart</font>. You can afford better.</li>
@@ -145,39 +81,26 @@
 				<li>If you're going to buy patio furniture, please drive a truck to the store. Not an SUV, not a minivan, A TRUCK. Patio furniture comes in big boxes.</li>
 				<li>If I'm in the store and I'm wearing a red vest and a name tag don't ask me if I work at the store unless you expect a smart-ass answer.</li>
 			</ol>
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">I work at <font color="#FF0000">K</font>mart</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+		</p>
+
+			<h2 class="a1">I work at <font color="#FF0000">K</font>mart</h2>
+
+		<p>
 			Maybe you didn't understand... <font color="#008000"> I</font> WORK AT <font color="#FF0000">K</font><font color="#0000FF">MART</font>!!!<br><br>
-			Update: Okay, I don't really work at Kmart anymore, but it still sucks.
-			<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<h3 class="a1">My <font color="#FF0000">K</font><font color="#0000FF">mart</font> pictures</h3>
-		</td>
-	</tr>
-	<tr>
-		<td width="5%"></td>
-		<td>
+			Update: Okay, I don't actually work at Kmart anymore, but it still sucks.
+
+		</p>
+
+		
+			<h2 class="a1">My <font color="#FF0000">K</font><font color="#0000FF">mart</font> pictures</h2>
+
+		<p>
 			Not technically a complaint. <a href="kmart-pics.html">Click to see.</a>
-			<hr><br>
-		</td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+		</p>
+
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
