--- a/links.html
+++ b/links.html
@@ -8,124 +8,53 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+	
+	<div id="body">
+		<div class="article">
+			<h1>Links</h1>
 
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997>
-	<tr>
-		<td align=center colspan=2>
-			<h2>Links</h2>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2></td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.ign.com">IGN</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			My favorite place for video game news and reviews.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.gamefaqs.com">GameFAQs</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			Guides for games.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.google.com">Google</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			Best search engine ever.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.yahoo.com">Yahoo!</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			Good for browsing topics.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.howstuffworks.com">How Stuff Works</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			This aptly named site explains how stuff works.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.penny-arcade.com">Penny Arcade Cartoons</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			Video game related comic strip updated three times a week.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.straightdope.com">Straight Dope</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			If you have a question, they have the answer.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.fullsystemfailure.com">full.system.failure</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			The home page for Nick's band.<hr><br>
-		</td>
-	</tr>
-	<tr>
-		<td colspan=2>
-			<a href="http://www.rpgtoolkit.com">RPG Toolkit</a>
-		</td>
-	</tr>
-	<tr>
-		<td width=5%></td>
-		<td>
-			Contains the RPG toolkit I am using to make my game.<hr><br>
-		</td>
-	</tr>
-</table>
+<div>
+	
+		<p>
+			<a href="http://www.ign.com">IGN</a> - My favorite place for video game news and reviews.
+		</p>
+		
+		<p>
+			<a href="http://www.gamefaqs.com">GameFAQs</a> - Guides for games.
+		</p>
+		
+		<p>
+			<a href="http://www.google.com">Google</a> - Best search engine ever.
+		</p>
+		
+		<p>
+			<a href="http://www.yahoo.com">Yahoo!</a> - Good for browsing topics.
+		</p>
+		
+		<p>
+			<a href="http://www.howstuffworks.com">How Stuff Works</a> - This aptly named site explains how stuff works.
+		</p>
+		
+		<p>
+			<a href="http://www.penny-arcade.com">Penny Arcade Cartoons</a> - Video game related comic strip updated three times a week.
+		</p>
+		
+		<p>
+			<a href="http://www.straightdope.com">Straight Dope</a> - If you have a question, they have the answer.
+		</p>
+		
+		<p>
+			<a href="http://www.fullsystemfailure.com">full.system.failure</a> - The home page for Nick's band.
+		</p>
+		
+		<p>
+			<a href="http://www.rpgtoolkit.com">RPG Toolkit</a> - Contains the RPG toolkit I am using to make my game.
+		</p>
+		
 </div>
-			</td>
-		</tr>
-	</table>
+
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
