--- a/ode-to-my-pop.html
+++ b/ode-to-my-pop.html
@@ -8,28 +8,11 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
-
-<div align="center">
-<table bgcolor=#FFFFFF cellpadding=5 width=997>
-	<tr>
-		<td width=250></td>
-		<td width=500>
-			<div align=center><h2>Ode To My Pop</h2></div>
-		</td>
-		<td width=250></td>
-	</tr>
-	<tr>
-		<td width=250></td>
-		<td width=500></td>
-		<td width=250></td>
-	</tr>
-	<tr>
-		<td width=250></td>
-		<td valign=top width=500>
-			<div align=center>
+	
+	<div id="body">
+		<div class="article" style="text-align: center;">
+			<h1>Ode To My Pop</h1>
+			<div>
 			Carbonated, caffeinated, bubbly goodness.<br><br>
 			Get yours now.<br><br>
 			In a can,<br><br>
@@ -43,14 +26,8 @@
 			Tastes better too!<br><br>
 			Oh, how I love the <font color=#00FF00> Mountain</font> <font color=#FF0000>Dew</font>.<br><br>
 			</div>
-		</td>
-		<td width=250></td>
-	</tr>
-</table>
-</div>
-			</td>
-		</tr>
-	</table>
+		</div>
+	</div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
