--- a/updates.html
+++ b/updates.html
@@ -8,37 +8,16 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" cellpadding=0 cellspacing=0>
-		<tr>
-			<td colspan=3>
+
+	<style>td { padding: 3px; border: 0 none; vertical-align: top; }</style>
+	<div id="body">
+		<div class="article">
+      <h1>Updates</h1>
 
 <div align=center>
-  <table bgcolor=#FFFFFF cellpadding=5 width=995>
-    <tr>
-      <td align=center colspan=2></td>
-    </tr>
-    <tr>
-      <td colspan=2></td>
-    </tr>
-    <tr>
-      <td colspan=2>
-        <hr>
-      </td>
-    </tr>
-    <tr>
-      <td colspan=2>
-        <p align=center>It's the site's webmaster <img border=0 src="images/mabgoing.gif" width=160 height=46> Mr. Alien But (that's one 't', not two!)<hr>
-      </td>
-    </tr>
-    <tr>
-      <td colspan=2 align="center"><h2>Updates<h2></td>
-    </tr>
-    <tr>
-      <td colspan=2>
-        <hr>
-        <p></td>
-    </tr>
-    </table>
+  <br>
+    <p align=center>It's the site's webmaster <img border=0 src="images/mabgoing.gif" width=160 height=46> Mr. Alien But (that's one 't', not two!)
+
 
 
 <table bgcolor=#FFFFFF cellpadding=5 cellspacing=5 width=995>
@@ -417,7 +396,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>Must remember to keep <font color="#FF0000">CrazyBoy</font> away from the 'puter.Eddie says &quot;oink.&quot;</td>
+    <td>Must remember to keep <font color="#FF0000">CrazyBoy</font> away from the 'puter. Eddie says &quot;oink.&quot;</td>
   </tr>
 
 			
@@ -447,9 +426,8 @@
   </tr>
 </table>
 </div>
-			</td>
-		</tr>
-	</table>
+</div>
+  </div>
 	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
